Mudanças no back, ajustes e front iniciado antes das tratativas
